--- a/package.json
+++ b/package.json
@@ -7,21 +7,47 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.1.0",
+    "@hookform/resolvers": "^2.6.0",
+    "@react-native-async-storage/async-storage": "^1.13.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^5.11.11",
+    "@react-navigation/native": "^5.9.4",
+    "date-fns": "^2.22.1",
     "expo": "~41.0.1",
+    "expo-app-loading": "^1.0.3",
+    "expo-font": "~9.1.0",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.5.4",
+    "intl": "^1.2.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-hook-form": "^7.9.0",
     "react-native": "~0.63.4",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.1.0",
-    "react-native-screens": "~3.0.0",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-reanimated": "^2.2.0",
+    "react-native-responsive-fontsize": "^0.5.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.4.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-unimodules": "~0.13.3",
-    "react-native-web": "~0.13.12"
+    "react-native-uuid": "^2.0.1",
+    "react-native-web": "~0.13.12",
+    "styled-components": "^5.3.0",
+    "victory-native": "^35.3.3",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "@types/jest": "^26.0.23",
+    "@types/react": "^17.0.11",
+    "@types/react-native": "^0.64.10",
+    "@types/react-test-renderer": "^17.0.1",
+    "@types/styled-components-react-native": "^5.1.1",
+    "typescript": "^4.3.4"
   },
   "private": true
 }
